raw-data/full-disclosure-database/2011/01/05/10

Date: Wed, 5 Jan 2011 12:04:28 -0500
From: Григорий Братислава <musntlive@...il.com>
To: Dan Rosenberg <dan.j.rosenberg@...il.com>
Cc: full-disclosure@...ts.grok.org.uk, bugtraq@...urityfocus.com
Subject: Re: Getting root, the hard way

Is code no work:

# uname -a
OpenBSD cyka.etopizdets.ru 4.7 WRIGHTKERNEL#1337 i386
# md5 danposerberg.c
MD5 (danposerberg.c) = 26b1dd146a3b96c63539f551a8741f18
# gcc danposerberg.c -o hakaruski
danposerberg.c:53:30: linux/capability.h: No such file or directory
danposerberg.c: In function `main':
danposerberg.c:155: error: `PF_PHONET' undeclared (first use in this function)
danposerberg.c:155: error: (Each undeclared identifier is reported only once
danposerberg.c:155: error: for each function it appears in.)
danposerberg.c:173: warning: assignment makes pointer from integer
without a cast
danposerberg.c:174: warning: assignment makes pointer from integer
without a cast
danposerberg.c:191: error: `MAP_ANONYMOUS' undeclared (first use in
this function)
danposerberg.c:200: warning: assignment makes integer from pointer
without a cast
danposerberg.c:204: warning: assignment makes integer from pointer
without a cast
danposerberg.c:208: warning: assignment makes integer from pointer
without a cast
danposerberg.c:231: warning: assignment makes pointer from integer
without a cast
# iswhere capability.h
ksh: iswhere: not found
# whereis capability.h
# emacs danposerberg.c
# gcc -w danposerberg.c -o fixeruski
danposerberg.c:53:30: linux/capability.h: No such file or directory
danposerberg.c: In function `main':
danposerberg.c:155: error: `PF_PHONET' undeclared (first use in this function)
danposerberg.c:155: error: (Each undeclared identifier is reported only once
danposerberg.c:155: error: for each function it appears in.)
danposerberg.c:191: error: `MAP_ANONYMOUS' undeclared (first use in
this function)
# ed danposerberg.c
# gcc -o fixeruski danposerberg.c
# ./fixeruski
SEGMENTATION FAULT
Is no work!! Is your machine is already backdoored see uname output


So i is retest to Linux machine:

$ uname -a
Linux pizda 2.6.29.4 #1 SMP Thu Dec 21 10:57:32 EDT 2003 i386 GNU/Linux
$ echo "is test for backdoors in code" && ruby -pe 'next if not
/jason|open|theo/' danposerberg.c
$ echo "code is been test for openbsd backdoors!! is no backdoors"
$ gcc -o fixeruski -w danposerberg.c
$ ./fixeruski
^C
^C
^C
^C
^C
^C
^C
^Z
^Z^Z^Z^Z^Z
^Z^Z^Z^Z^Z^Z^Z^C^C^C^C^C
$

_______________________________________________
Full-Disclosure - We believe in it.
Charter: http://lists.grok.org.uk/full-disclosure-charter.html
Hosted and sponsored by Secunia - http://secunia.com/
